# project-thoth

./: .codespellignore  .cursorignore  .dockerignore  .env.docker  .env.docker.example  .env.docker.thoth  .env.example  .env.letta.example  .env.prod.example  .env.test  .env.vault  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE.md.backup  CODEBASE_DELETION_AUDIT.md  CONTRIBUTING.md  DISCOVERY_SYSTEM_README.md  DOCKER_WORKFLOW.md  Dockerfile  Dockerfile.dev  Dockerfile.setup  LETTA_FIX_PROPOSAL.md  LICENSE  MAKEFILE_USAGE.md  Makefile  Makefile.services  PDF_DELETION_ANALYSIS.md  PLUGIN_QUICK_START.md  README-INSTALL.md  README-docker.md  README.md  RESEARCH_ASSISTANT_INTEGRATION.md  SCRAPE_FILTER_INTEGRATION.md  TAG_CONSOLIDATION_README.md  alembic.ini  arxiv_test_config.json  build-plugin.sh  citation_test_results.json  coverage.xml  (+37 more)
${WORKSPACE_DIR}/knowledge/: processed_pdfs.json
.claude/: mcp-wrapper.sh  settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: ux-frontend-engineer.md
.cursor/: Dockerfile  summary.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  QUICK_START.md
.github/workflows/: README.md  ci.yml  codeql.yml  docker.yml  nightly.yml  release.yml
.hive-mind/: config.json  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1763842907519-a2163p503.txt  hive-mind-prompt-swarm-1763859662842-svolmcumm.txt  hive-mind-prompt-swarm-1763943785130-iu9wazuo4.txt  hive-mind-prompt-swarm-1764371579179-fwo23khjw.txt  hive-mind-prompt-swarm-1764807645889-kdudn8wfx.txt  hive-mind-prompt-swarm-1764808467323-kv61qfpjs.txt  hive-mind-resume-session-1763859662843-rc99svv7n-1763865807495.txt  hive-mind-resume-session-1763943785134-satxipmyx-1763998955617.txt  hive-mind-resume-session-1763943785134-satxipmyx-1764116170462.txt  session-1763842907520-jqs8h231x-auto-save-1763842937522.json  session-1763859179701-703xxdxph-auto-save-1763859209701.json  session-1763859274938-24i8z8i8w-auto-save-1763859304939.json  session-1763859662843-rc99svv7n-auto-save-1763859692844.json  session-1763943785134-satxipmyx-auto-save-1763943815136.json  (+3 more)
.swarm/: memory.db-shm
deployment/: docker-compose.services.yml
docker/: deploy.sh  docker-deployment-guide.md  entrypoint.sh  healthcheck.py  init-pgvector.sh  test-docker-setup.sh  wait-for-services.sh
docs/: AGENT_COORDINATION.md  AGENT_RESTORATION.md  AGENT_SYSTEM.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  BACKFILL_RESULTS_2025-12-30.md  BATCH_CITATION_PROCESSING.md  BROWSER_MANAGER_SETUP.md  BROWSER_WORKFLOW_ARCHITECTURE.md  BROWSER_WORKFLOW_QUICK_START.md  BROWSER_WORKFLOW_REFERENCE_CARD.md  BROWSER_WORKFLOW_REPOSITORY_FIX.md  BROWSER_WORKFLOW_TOOLS.md  BUGFIXES_COMPLETE_2025-12-30.md  CITATION_KNOWLEDGE_GRAPH.md  CITATION_SYSTEM_AUDIT.md  CI_CD_SETUP.md  CLI_PERFORMANCE_GUIDE.md  COMMAND_REFERENCE_CARD.md  COMPLETE_FEATURE_REFERENCE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  CRITICAL_BUGFIXES_2025-12-30.md  DATA_PERSISTENCE_ARCHITECTURE.md  DEBUGGING_GUIDE.md  DEPENDENCY_MAPPING.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DISCOVERY_SYSTEM_ARCHITECTURE.md  DISCOVERY_SYSTEM_README.md  DOCKER_BROWSER_WORKFLOW_SETUP.md  DOCKER_DEPLOYMENT.md  DOCUMENT_PIPELINE_ARCHITECTURE.md  EVALUATION_FRAMEWORKS.md  EXTENSIBILITY_GUIDE.md  FIX_SUMMARY_2025-12-28.md  HEALTH_CHECK_FIXES.md  IMPLEMENTATION_ISSUES.md  (+109 more)
examples/: browser_workflow_plugin_example.py  discovery_config_examples.json  openalex_resolver_example.py  paper_urls.txt  performance_analysis_demo.py  research_assistant_demo.py  research_workflow_with_coordination.py  simple_scraper_integration.py  workflow_execution_example.py
graph/: citations.graphml
memory/: claude-flow@alpha-data.json
planning/: additional_streamlining_plan.md  code_review_report.md  discovery_creation_system_plan.md  duckduckgo_discovery_plan.md  external_mcp_integration_plan.md  external_mcp_quick_start.md  letta_memory_upgrade_pr_plan.md  memory_management_plan.md  multi_agent_commit_plan.md  multi_agent_framework_plan.md  multi_agent_framework_v2_plan.md  multi_agent_framework_v3_minimal.md  multi_agent_framework_v4_balanced.md  multi_agent_implementation_detailed_prs.md  multi_agent_implementation_prs.md  phase1_completion_report.md  phase2_completion_report.md  phase3_completion_report.md  phase4_deletable_code.md  popular_mcp_servers.md  project_plan.md  stage1_plan.md  thoth_multi_agent_comprehensive_report.md
queries/: machine_learning.json  nlp_research.json
scripts/: add_agent_communication_tools.py  analyze_processing_gaps.py  attach-mcp-to-agents.py  batch_process_pdfs.py  check-letta.sh  check_agentic_tool.py  check_mcp_registration.py  communication_tool_ids.json  configure_letta_mcp.py  create_message_queue.py  create_new_agents.py  debug_embeddings.py  debug_letta_tools.py  detailed_pdf_diagnostic.py  diagnose_graph_articles.py  enable_multi_agent_tools.py  fix_agent_tools.py  fix_default_agent.sh  fix_segfault.py  force-reload-plugin.sh  force_mcp_refresh.py  health_check.py  implement_specialized_architecture.py  letta-migrate.sh  letta-restart.sh  letta-start.sh  letta-status.sh  letta-stop.sh  letta-update.sh  multi_agent_tool_ids.json  optimize_agent_tools.py  register_mcp_server.py  register_multi_agent_tools.py  release.sh  restart_mcp_servers.sh  restore-agents-complete.py  restore-agents.py  setup_orchestrator_registry.py  shared_memory_blocks.json  start-all-services.sh  (+13 more)
templates/: analysis_schema.json  note_template.md  obsidian_note.md  paper_note.md  thoth.settings.json
tests/: README.md  TESTING_OVERVIEW.txt  TEST_STRATEGY.md  __init__.py  conftest.py  property_based_test_example.py  pytest.ini  run_tests.py  test_browser_manager.py  test_bulk_url_processor.py  test_config.py  test_dummy.py  test_hybrid_search.py  test_integration.py  test_match_validator.py  test_message_queue.py  test_pipeline.py  test_placeholder.py  test_query_router.py  test_reranker.py  test_utils.py  test_workflow_execution_service.py
thoth/: __main__.py  config.py
(+1365 files in other folders)
