[build-system]
requires = ["setuptools >= 60.0.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thoth"
description = "Thoth AI Research Agent - An autonomous system for academic research paper processing and knowledge management"
readme = "README.md"
requires-python = ">=3.10, <3.13"
version = '0.1.0'
authors = [{name="Nick Hallmark", email="NHALLMARK3@BLOOMBERG.NET"}]

dependencies = [
    # Core Dependencies
    "watchdog>=3.0.0",           # For monitoring PDF folder
    "mistralai>=0.0.7",          # For OCR API access
    "openrouter>=0.0.1",         # For LLM API access
    "jinja2>=3.1.2",             # For template rendering
    "pydantic>=2.4.2",           # For data validation
    "loguru>=0.7.0",             # For logging
    "python-dotenv>=1.0.0",      # For environment variables
    "aiohttp>=3.8.5",            # For async HTTP requests
    "pypdf>=4.0.0",              # For PDF processing
    "requests>=2.31.0",          # For HTTP requests
    "click>=8.1.8",              # For CLI
]

[project.optional-dependencies]
dev = [
    # Standard dev workflow tools
    'black',
    'build',
    'codespell',
    'pre-commit',
    'pytest',
    'pytest-cov',
    'ruff',
    'twine',
    'mypy',
    # Additional dev dependencies
    'pytest-asyncio',
    'pytest-mock',
    'aiohttp',
    'httpx',
]

jupyter = [
    'ipykernel',
    'jupyter',
    'notebook',
    'plotly>=5.18.0',
    'pandas>=2.1.0',
]

[tool.setuptools.packages.find]
where = ["."]

### Docker ###########################################################################
[tool.docker.base_images.default]
image = ""

[tool.docker.base_images.cuda]
image = ""
cuda_version = "12.1"
cudnn_version = "8.9.2.26"
nccl_version = "2.18.5"

### STANDARDIZED CODE REQUIREMENTS
### black ############################################################################
[tool.black]
line-length = 88 # ensure this matches ruff this is the default
target-version = ['py310', 'py311', 'py312']
include = '\.py$'
skip-string-normalization = true

### pytest ###########################################################################
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

### ruff #############################################################################
[tool.ruff]
line-length = 88  # ensure this matches black this is the default

[tool.ruff.lint]
select = [
    # All rules enabled as defined here:
    # https://github.com/charliermarsh/ruff#supported-rules
    # Pyflakes
    "F",
    # pydocstyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # Ruff-specific
    "RUF",
    # pep8-naming
    # InvalidClassName
    "N801",
    # InvalidFunctionName
    "N802",
    # InvalidArgumentName
    "N803",
    # InvalidFirstArgumentNameForClassMethod
    "N804",
    # InvalidFirstArgumentNameForMethod
    "N805",
    # NonLowercaseVariableInFunction
    "N806",
    #pandas-vet
    # UseOfInplaceArgument
    "PD002",
    # UseOfDotIsNull
    "PD003",
    # UseOfDotNotNull
    "PD004",
    # UseOfDotIx
    "PD007",
    # UseOfDotAt
    "PD008",
    # UseOfDotIat
    "PD009",
    # UseOfDotPivotOrUnstack
    "PD010",
    # UseOfDotValues
    "PD011",
    # UseOfDotReadTable
    "PD012",
    # UseOfDotStack
    "PD013",
    # UseOfPdMerge
    "PD015",
]
# Add rules to explicitly ignore here
ignore = [
]
extend-unsafe-fixes = ["UP034"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'

### sqlfluff ########################################################################
[tool.sqlfluff.core]
dialect = "bigquery"

templater = "jinja"

# For a breakdown of rules, check out https://docs.sqlfluff.com/en/stable/rules.html
exclude_rules = "L015,L026,L027,L031,L034,L042,L054"

ignore = "templating"
[tool.sqlfluff.rules]
tab_space_size = 2

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L014]
extended_capitalisation_policy = "lower"
unquoted_identifiers_policy = "all"

[tool.sqlfluff.rules.L016]
ignore_comment_lines = true

[tool.sqlfluff.rules.L030]
extended_capitalisation_policy = "upper"

[tool.codespell]
exclude-file = ".codespellignore"
