[build-system]
requires = ["setuptools >= 60.0.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thoth"
description = "Thoth AI Research Agent - An autonomous system for academic research paper processing and knowledge management"
readme = "README.md"
requires-python = ">=3.10, <3.13"
version = '0.1.0'
authors = [{name="Nick Hallmark", email="NHALLMARK3@BLOOMBERG.NET"}]

dependencies = [
    # Core Dependencies
    "watchdog>=6.0.0", # For monitoring PDF folder
    "mistralai>=1.5.1", # For OCR API access
    "openrouter>=1.0", # For LLM API access
    "jinja2>=3.1.6", # For template rendering
    "pydantic>=2.9.2", # For data validation
    "pydantic-settings>=2.5.0", # For settings management
    "loguru>=0.7.3", # For logging
    "python-dotenv>=1.0.1", # For environment variables
    "aiohttp>=3.8.5", # For async HTTP requests
    "pypdf>=5.3.1", # For PDF processing
    "requests>=2.32.3", # For HTTP requests
    "click>=8.1.8", # For CLI
    "fastapi>=0.115.12", # For API endpoints
    "uvicorn>=0.32.0", # For ASGI server
    # LangChain Dependencies
    "langchain>=0.3.21", # For document processing and chunking
    "langchain-core>=0.3.45",
    "langchain-text-splitters>=0.3.7", # For text splitting capabilities
    "langchain-openai>=0.3.9",
    "langgraph>=0.4.7",
    "langgraph-checkpoint>=2.0.26",
    "langgraph-sdk>=0.1.70",
    "langgraph-prebuilt>=0.2.1",
    "langsmith>=0.3.16",
    # Vector Store and RAG Dependencies
    "chromadb>=0.5.0", # For vector database
    "langchain-chroma>=0.1.0", # For ChromaDB integration with LangChain
    # Data Processing Dependencies
    "networkx>=3.4.2",
    "scholarly>=1.7.11",
    "tiktoken>=0.9.0",
    "grandalf>=0.8",
    "json-repair>=0.44.1",
    "websockets>=15.0.1",
    "openai>=1.57.0",
    "beautifulsoup4>=4.13.2",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "plotly>=5.20.0",
    "bibtexparser>=1.4.2",
    "selenium>=4.29.0",
    "fake-useragent>=2.1.0",
    "arrow>=1.3.0",
    "sqlalchemy>=2.0.39",
    "deprecated>=1.2.18",
    "httpx>=0.27.0",
    "jsonpatch>=1.33",
    "roman-numerals-py>=3.1.0",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "aiohttp>=3.11.13",
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "codespell>=2.4.1",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.11",
    "twine>=6.1.0",
]
jupyter = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

### STANDARDIZED CODE REQUIREMENTS ###################################################
### pytest ###########################################################################
[tool.pytest.ini_options]
testpaths = ["tests"]

### ruff #############################################################################
[tool.ruff]
line-length    = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "UP", "B", "ARG", "RUF",
    "N801", "N802", "N803", "N804", "N805", "N806",
    "PD002", "PD003", "PD004", "PD007", "PD008",
    "PD009", "PD010", "PD011", "PD012", "PD013", "PD015",
]
ignore = ["E501"]
extend-unsafe-fixes = ["UP034"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style               = "single"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"
docstring-code-format = true

### Black (for auto-wrapping) ########################################################
[tool.black]
line-length    = 88
target-version = ["py312"]

### sqlfluff ########################################################################
[tool.sqlfluff.core]
dialect    = "bigquery"
templater  = "jinja"
exclude_rules = "L015,L026,L027,L031,L034,L042,L054"
ignore        = "templating"

[tool.sqlfluff.rules]
tab_space_size = 2

[tool.sqlfluff.rules.L010]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L014]
extended_capitalisation_policy = "lower"
unquoted_identifiers_policy    = "all"

[tool.sqlfluff.rules.L016]
ignore_comment_lines = true

[tool.sqlfluff.rules.L030]
extended_capitalisation_policy = "upper"

### codespell ########################################################################
[tool.codespell]
exclude-file = ".codespellignore"
